# Dnspect

./: .gitignore  README.md  pyproject.toml  requirements.txt
dnspect/: __init__.py  cli.py  formatter.py  parser.py  resolver.py  utils.py
