[project]
name = "dnspect"
version = "1.0.0"
description = "Professional DNS Lookup CLI Tool using Python, Typer & Rich"
authors = [{ name = "Yumna Mohammed", email = "yumnamohammednursema1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["dnspython", "rich", "typer"]

[project.scripts]
dnspect = "dnspect.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
